# megatools_fork

./: .gitignore  HACKING  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  install-symlinks.sh  meson.build  meson_options.txt
.github/ISSUE_TEMPLATE/: bug_report.md
contrib/bash-completion/: megatools
docs/: Makefile  Makefile.am  basic-options.txt  download-options.txt  footer.txt  megacopy.txt  megadl.txt  megaget.txt  megals.txt  megaput.txt  megarc.txt  megatools-copy.txt  megatools-df.txt  megatools-dl.txt  megatools-export.txt  megatools-get.txt  megatools-ls.txt  megatools-mkdir.txt  megatools-put.txt  megatools-reg.txt  megatools-rm.txt  megatools-test.txt  megatools.txt  network-options.txt  shared-options.txt  upload-options.txt
lib/: http.c  http.h  mega.c  mega.h  tools.c  tools.h
libtools/: http.c  http.h  oldmega.c  oldmega.h  tools.c
mega/: mega-http-client.c  mega-http-client.h  mega-http-input-stream.c  mega-http-input-stream.h  mega-http-io-stream.c  mega-http-io-stream.h  mega-http-output-stream.c  mega-http-output-stream.h  mega.h  megatypes.h
tests/: get-pin-key.sh  test-api.js  test-bindings.py  test-http.js
tests/download-test/: resume-test.sh
tests/tools/: .megarc  00-test-reg.sh  06-test-dl.sh  08-test-stream.sh  config
tools/: Makefile.am  copy.c  df.c  dl.c  export.c  get.c  ls.c  mkdir.c  mv.c  put.c  reg.c  rm.c  shell.c  shell.h  test.c
tools/libtools/: alloc.h  oldmega.c  tools.c
